--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "formik": "^1.5.1",
     "gatsby": "^2.1.20",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.21",
