--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-helmet": "^5.2.0",
     "react-scroll": "^1.7.11",
     "react-scroll-to-component": "^1.0.2",
+    "react-slick": "^0.23.2",
     "react-typography": "^0.16.18",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
     "typography": "^0.16.18"
   },
