--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scroll-to-component": "^1.0.2",
     "react-slick": "^0.23.2",
     "react-typography": "^0.16.18",
+    "react-youtube": "^7.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
     "typography": "^0.16.18"
