--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@u-wave/react-vimeo": "^0.6.0",
     "formik": "^1.5.1",
     "gatsby": "^2.1.20",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.21",
-    "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-sharp": "^2.0.24",
     "gatsby-plugin-styled-components": "^3.0.6",
@@ -21,11 +19,10 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-player": "^1.9.3",
     "react-scroll": "^1.7.11",
-    "react-scroll-to-component": "^1.0.2",
     "react-slick": "^0.23.2",
     "react-typography": "^0.16.18",
-    "react-youtube": "^7.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
     "typography": "^0.16.18"
